--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </main>
 
   <footer>
-    <button id="resetBtn">New Puzzle</button>
+    <button id="resetBtn">Scramble Letters</button>
     <p class="small">Created for: Mother — Enjoy!</p>
   </footer>
 </div>
