--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <footer>
     <button id="resetBtn">Scramble Letters</button>
-    <p class="small">Created for: Mother — Enjoy!</p>
+    <p class="small">Created in the honour of Rosemary Pawliuk — Enjoy!</p>
   </footer>
 </div>
 <script src="script.js"></script>
