--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header>
     <h1>Word Search — Happy Birthday, Mom!</h1>
-    <p>Click a start letter then an end letter to select a word. Words can go in any straight line (horizontal, vertical, diagonal). Found words will be crossed off the list.</p>
+    <p>Click a start letterand drag to the end letter to select a word. Words can go in any straight line (horizontal, vertical, or diagonal). Found words will be highlighted and crossed off the list.</p>
   </header>
 
   <main>
@@ -25,7 +25,7 @@
   </main>
 
   <footer>
-    <button id="resetBtn">Scramble Letters</button>
+    <button id="resetBtn">Scramble Letters and Start Over</button>
     <p class="small">Created in the honour of Rosemary Pawliuk — Enjoy!</p>
   </footer>
 </div>
