--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <div class="page">
+<div class="confetti-container"></div>
+
 
   <header>
     <h1>Word Search — Happy Birthday, Mom!</h1>
